--- a/packages/enterprise/package.json
+++ b/packages/enterprise/package.json
@@ -14,7 +14,7 @@
     }
   },
   "scripts": {
-    "build": "tsup src/index.ts src/cli.ts --format esm,cjs --dts",
+    "build": "tsup src/index.ts src/cli.ts --format esm",
     "dev": "tsx src/cli.ts"
   },
   "keywords": [
